--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,13 +23,13 @@ jobs:
           name: Install helm s3 plugin
           command: |
             helm plugin install https://github.com/hypnoglow/helm-s3.git;
-            helm s3 init $HELM_S3_BUCKET/stable/react-app;
-            helm repo add stable-react-app $HELM_S3_BUCKET/stable/react-app/;
+            helm s3 init $HELM_S3_BUCKET/react-app;
+            helm repo add react-app $HELM_S3_BUCKET/react-app/;
       - run:
           name: Package and publish chart
           command: |
             helm package .;
-            helm s3 push ./react-app-0.1.0.tgz stable-react-app
+            helm s3 push ./react-app-0.1.0.tgz react-app
 
 workflows:
   helm:
